<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cyou.wssy001</groupId>
        <artifactId>fallout76-assistant</artifactId>
        <version>1.3.0.dev</version>
    </parent>

    <artifactId>base-service-provider</artifactId>
    <packaging>jar</packaging>

    <dependencies>
        <dependency>
            <groupId>cyou.wssy001</groupId>
            <artifactId>common</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>cyou.wssy001</groupId>
            <artifactId>kook-adopter</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>cyou.wssy001</groupId>
            <artifactId>qq-adopter</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>cyou.wssy001</groupId>
            <artifactId>dodo-adopter</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>cyou.wssy001</groupId>
            <artifactId>wiki-provider</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <finalName>fallout76-assistant-robot</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
<!--                    <annotationProcessorPaths>-->
<!--                        <path>-->
<!--                            <groupId>org.mapstruct</groupId>-->
<!--                            <artifactId>mapstruct-processor</artifactId>-->
<!--                            <version>${mapstruct.version}</version>-->
<!--                        </path>-->
<!--                        <path>-->
<!--                            <groupId>org.projectlombok</groupId>-->
<!--                            <artifactId>lombok</artifactId>-->
<!--                            <version>${lombok.version}</version>-->
<!--                        </path>-->
<!--                        <path>-->
<!--                            <groupId>org.projectlombok</groupId>-->
<!--                            <artifactId>lombok-mapstruct-binding</artifactId>-->
<!--                            <version>0.2.0</version>-->
<!--                        </path>-->
<!--                    </annotationProcessorPaths>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <configuration>
                    <imageName>fallout76-assistant-robot</imageName>
                    <buildArgs combine.children="append">
                        <buildArg>--enable-preview</buildArg>
                        <buildArg>--enable-https</buildArg>
                        <buildArg>-H:JNIConfigurationFiles=src/main/resources/jni-config.json</buildArg>
                        <buildArg>--features=cyou.wssy001.baseserviceprovider.config.BouncyCastleFeature</buildArg>
                        <buildArg>-H:ClassInitialization=org.bouncycastle.crypto.CryptoServicesRegistrar:rerun
                        </buildArg>
                        <buildArg>-H:ClassInitialization=org.bouncycastle.jcajce.provider.drbg.DRBG:rerun</buildArg>
                        <buildArg>-H:ClassInitialization=org.bouncycastle.jcajce.provider.drbg.DRBG$Default:rerun
                        </buildArg>
                        <buildArg>-H:ClassInitialization=org.bouncycastle.jcajce.provider.drbg.DRBG$NonceAndIV:rerun
                        </buildArg>
                    </buildArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                    <jvmArguments>
                        --enable-preview
                    </jvmArguments>
                    <compilerArguments>
                        --enable-preview
                    </compilerArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
